@@ -1,3 +1,6 @@
+20050530 FluidSynth-DSSI v0.9.1 release
+ * Symlink fluidsynth-dssi to jack-dssi-host, if it exists.
+
 20050510 CVS smbolton
  * Version bump to 0.9.1.
  * Moved FluidSynth-DSSI into its own SourceForge CVS module.
